Make FileNetLogObsever not crash when it fails to open output files.

Bug: 741220
Change-Id: Ia066158712e5980459af17d602795c4997a90b2f
Reviewed-on: https://chromium-review.googlesource.com/567799
Reviewed-by: Matt Menke <mmenke@chromium.org>
Reviewed-by: Helen Li <xunjieli@chromium.org>
Commit-Queue: Eric Roman <eroman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486096}
Former-commit-id: a96b043bda58587732f846e40e25805b108ffe20